src/style/index.scss
@import "vars";

* {
    box-sizing: border-box;
    font-family: "Noto Sans", sans;
}

body {
    font-size: 14px;
    margin: 0;
    background: $background;
    color: $color;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-align: center;
}
body::-webkit-scrollbar {
    display: none;
}

footer {
    text-align: center;
    padding: 12px 0;
    margin-top: 42px;
}

a,
a:hover {
    color: $primary;
}

.headline,
h1 {
    color: rgba(255, 255, 255, 0.3);
    font-weight: 800;
}

h2 {
    margin-bottom: 0;
    margin-top: 6px;
}
h2 + p {
    margin-top: 0;
}

hr {
    margin: 10px 0;
    border: none;
    height: 1px;
    background: rgba(255, 255, 255, 0.08);
}
hr.spacer {
    margin: 4px 0;
    opacity: 0;
}

.icon-reload {
    cursor: pointer;
    vertical-align: middle;
    display: inline-block;
    padding: 0 6px;
}
.icon-reload img {
    width: 20px;
}

.asset-text {
    font-size: 16px;
    text-transform: uppercase;
    margin-left: 4px;
}

.asset-wrap {
    background-color: rgb(23, 34, 46);
    border: 1px solid rgba(255, 255, 255, 0.15);
    position: absolute;
    border-radius: 29px;
    padding: 0px;
    padding-right: 8px;
    top: 10px;
    left: 10px;
    cursor: pointer;
    &:hover {
        background-color: rgba(255, 255, 255, 0.25);
    }
}

.asset-selection {
    display: flex;
    align-items: center;
    padding: 1px;
    padding-right: 8px;
}

.fees-dyn {
    display: flex;
    justify-content: center;
}
.fees-dyn > * {
    flex-grow: 1;
    display: flex;
    align-items: center;
    justify-content: start;
}
.fees-dyn,
.icons > div {
    position: relative;
    text-align: right;
}
.icons > div {
    margin: 9px 0;
}

#invoice-qr {
    width: 66.666%;
}

#invoiceLabel {
    display: block;
    margin-bottom: 6px;
}

#reverse input {
    cursor: pointer;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    opacity: 0;
    margin: 0;
    outline: none;
    border: none;
}

.btn {
    cursor: pointer;
    margin-top: 10px;
    padding: 8px 12px;
    text-decoration: none;
    border-radius: 16px;
    background-color: $primary;
    color: #14283f;
    font-weight: bold;
    text-transform: uppercase;
    border: none;
    width: 100%;
    display: flex;
    justify-content: center;
    svg {
        margin-right: 3px;
    }
}

.btn-small {
    background-color: $primary;
    color: #14283f;
    border-radius: 7px;
    padding: 0 6px;
    cursor: pointer;
    text-decoration: none;
}

[data-status="swap.expired"],
[data-status="invoice.expired"],
[data-status="transaction.refunded"],
[data-status="invoice.failedToPay"],
[data-status="transaction.lockupFailed"] {
    > p > .btn-small {
        background-color: $error;
        color: #fff;
    }
}

[data-status="swap.expired"],
[data-status="swap.refunded"],
[data-status="invoice.settled"],
[data-status="transaction.confirmed"],
[data-status="transaction.claimed"] {
    > p > .btn-small {
        background-color: #246c24;
        color: #fff;
    }
}

.tag .btn {
    background-color: rgba(0, 0, 0, 0.2);
    color: white;
}

.btn:disabled:hover,
.btn:disabled {
    color: #14283f;
    background-color: #545c65;
    cursor: not-allowed;
}

.btn-active,
.btn-small:hover,
.btn:hover,
.tag .btn:hover {
    background-color: #fff;
    color: #14283f;
}

.btn-light {
    color: white;
    background-color: rgb(11, 22, 35);
}
.btn-light:hover {
    background-color: $primary;
}
.btn-explorer {
    background: #533180;
    color: white;
}
.btn-explorer:hover {
    background: white;
    color: #533180;
}

.btn-success {
    background-color: #246c24;
    color: white;
}
.btn-success:hover {
    background-color: #fff;
}
.btn-danger:disabled,
.btn-danger {
    background-color: transparentize($error, 0.42);
    color: white;
}
.btn-danger:hover {
    background: $error;
}
.btns {
    display: flex;
    align-items: center;
    justify-content: center;
}
.btns-space-between {
    justify-content: space-between;
}
.btns .btn {
    width: auto;
    margin: 3px;
    flex-grow: 1;
}
.btns .no-grow {
    flex-grow: 0;
}

.fee {
    padding: 0 24px;
}

.fees {
    display: flex;
    justify-content: space-between;
}
.tags {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type="number"] {
    -moz-appearance: textfield;
}

textarea {
    resize: none;
}

input,
textarea {
    color: rgba(255, 255, 255, 0.3);
    background: rgba(0, 0, 0, 0.3);
    border: 1px dashed rgba(255, 255, 255, 0.3);
    border-radius: 10px;
    width: 100%;
    font-size: 15px;
    font-weight: normal;
    text-align: center;
    margin: 0;
    padding: 7px 8px;
    box-sizing: border-box;
}
input:focus,
textarea:focus {
    outline: none;
    color: #ddd;
    border-color: $primary;
}
input.invalid,
textarea.invalid {
    outline: none;
    color: #ddd;
    border-color: $error;
}
.fees-dyn label {
    display: block;
}
#receiveAmount,
#sendAmount {
    font-size: 33px;
    text-align: right;
}
@media (max-width: 488px) {
    #receiveAmount,
    #sendAmount {
        font-size: 30px;
    }
}
textarea {
    min-height: 198px;
}

#refundAddress {
    margin: 8px 0 0;
}

#steps {
    padding: 0 12px;
}
#steps > .frame > div {
    display: none;
}

#steps > .frame > .active {
    display: block;
}

#notification {
    background: black;
    color: white;
}
.toggle {
    cursor: pointer;
    flex-grow: 0;
    background: rgba(0, 0, 0, 0.3);
    border-radius: 18px;
    border: 1px dashed rgba(255, 255, 255, 0.3);
    padding: 0 5px;
    align-items: center;
    display: flex;
    justify-content: start;
    height: 36px;
    &:hover {
        background: rgb(20, 40, 63);
    }
    > * {
        width: 28px;
        height: 28px;
        border-radius: 50%;
        user-select: none;
    }
    > :first-child {
        margin-right: 5px;
    }
    .active {
        color: rgb(247, 147, 26);
        background-color: rgb(23, 34, 46);
        border: 1px solid rgba(255, 255, 255, 0.25);
    }
}
.denomination img {
    filter: brightness(10);
    cursor: pointer;
    width: 28px;
}
.denominator {
    filter: brightness(10);
    width: 15px;
    height: 11px;
    background-repeat: no-repeat;
    background-size: contain;
    display: inline-block;
    transform: scale(2.1);
    background-position: right;
}
.denominator-big {
    width: 33px;
    height: 30px;
    transform: scale(1.5);
}

[data-denominator="btc"] {
    background-image: url(../assets/btc.svg);
}
[data-denominator="sat"] {
    background-image: url(../assets/sat.svg);
}
.denomination .active {
    filter: none;
    border-radius: 50%;
    background-color: rgb(23, 34, 46);
    border: 1px solid rgba(255, 255, 255, 0.25);
}

.hidden {
    display: none;
}

.frame {
    color: #fff;
    padding: 12px;
    min-width: 360px;
    max-width: 480px;
    margin: 0 auto;
    border: 1px solid rgba(255, 255, 255, 0.1);
    position: relative;
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-left: 0;
    border-right: 0;
    background: #0003;
}

@media (min-width: 488px) {
    .frame {
        margin-top: 74px;
        margin-bottom: 56px;
        border: 1px solid rgba(255, 255, 255, 0.1);
        border-radius: 16px;
    }
}

.error {
    background: transparentize($error, 0.15);
    color: #ddd;
    padding: 6px 10px;
    display: inline-block;
}

#flip-assets {
    width: 32px;
    height: 32px;
    padding: 8px;
    background: rgb(11, 22, 35);
    margin: -21px auto;
    border: 1px dashed rgb(55, 55, 55);
    border-radius: 6px;
    cursor: pointer;
    z-index: 1;
    box-shadow: 0 0 7px rgba(0, 0, 0, 0.4);
}
#flip-assets:hover {
    background: rgb(20, 40, 63);
}

#flip-assets svg {
    width: 100%;
    opacity: 0.5;
}

.arrow-down {
    border: solid white;
    display: inline-block;
    border-width: 0 2px 2px 0;
    display: inline-block;
    padding: 4px;
    margin-left: 8px;
    position: relative;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    top: -2px;
}

.asset-select {
    display: flex;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.05);
    border: 1px solid rgba(255, 255, 255, 0.15);
    border-radius: 29px;
    padding: 1px;
    padding-right: 16px;
    cursor: pointer;
    display: inline-flex;
    text-transform: uppercase;
    margin: 5px;
}
[data-selected="true"],
.asset-select:hover {
    background-color: rgba(255, 255, 255, 0.25);
}
[data-selected="true"] {
    cursor: default;
}
.assets-select {
    background: #102032;
    position: absolute;
    max-width: 454px;
    width: 93%;
    top: 64px;
    z-index: 9999;
    display: none;
    box-shadow: 0 0 12px black;
    margin: 0;
}
.assets-select.active {
    display: block;
}
.assets-select:after {
    content: "";
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.5);
    z-index: -1;
}

.close {
    cursor: pointer;
    user-select: none;
    z-index: 1000;
    position: absolute;
    top: 8px;
    right: 8px;
    font-size: 30px;
    margin-top: 5px;
}

#close {
    cursor: pointer;
    transform: rotate(45deg);
    -webkit-tap-highlight-color: transparent;
    transition: transform 400ms;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    z-index: 1000;
    position: absolute;
    top: 8px;
    right: 8px;
}
#close .line {
    fill: none;
    transition:
        stroke-dasharray 400ms,
        stroke-dashoffset 400ms;
    stroke: #fff;
    stroke-width: 5.5;
    stroke-linecap: round;
}
#close .top {
    stroke-dashoffset: -68px;
    stroke-dasharray: 40 121;
}
#close .bottom {
    stroke-dashoffset: -68px;
    stroke-dasharray: 40 121;
}
.btn-inline {
    display: inline-block;
    width: auto;
}
.network-fee,
.boltz-fee {
    margin-right: 4px;
}

.globe {
    cursor: pointer;
    padding-left: 20px !important;
    padding-top: 6px;
    display: inline-block;
}

.external svg {
    padding-left: 6px;
    float: right;
}

.break-word {
    word-break: break-all;
}

.address-box {
    font-size: 18px;
    background-color: #545c65;
    background-color: rgba(0, 0, 0, 0.2);
    border-radius: 7px;
    padding: 10px;
    border: 1px solid rgba(255, 255, 255, 0.1);
    color: rgba(255, 255, 255, 0.5);
    margin: 0;
    cursor: pointer;
}

.bulletpoints {
    text-align: left;
    display: inline-block;
    margin: 0;
}

.pointer {
    cursor: pointer;
}

